# MFKDF2.rs

./: .gitignore  .taplo.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cspell.json  justfile  notes.md  test_bindings.py  toolchain.toml
.devcontainer/: devcontainer.json  setup.sh
.github/: labels.yaml
.github/workflows/: bindings.yaml  book.yaml  differential.yaml  reports.yaml  rust.yaml
docs/: book.toml  devlog.md
docs/src/: SUMMARY.md  benchmarks.md  development.md  differential-tests.md  index.md  roadmap.md
docs/src/bindings/: bindings.md
mfkdf2/: Cargo.toml  README.md  katex-header.html  uniffi-bindgen.rs
mfkdf2-py/: Cargo.toml
mfkdf2-wasm/: Cargo.toml  api.js  example.html  example.js  mfkdf2.js  test.js
mfkdf2-wasm/src/: lib.rs
mfkdf2-web/: .mocharc.cjs  README.md  mocha-reporters.json  package-lock.json  package.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  tsconfig.test.json  ubrn.config.yaml
mfkdf2-web/.config/: mocha-reporters-differential.json  ubrn.config.yaml
mfkdf2-web/rust_modules/wasm/: Cargo.toml
mfkdf2-web/rust_modules/wasm/src/: mfkdf2_module.rs
mfkdf2-web/src/: api.ts  index.ts  index.web.ts  utils.ts
mfkdf2-web/test/: factors.test.ts
mfkdf2-web/test/derive/: key.test.ts  outputs.test.ts
mfkdf2-web/test/derive/factors/: password.test.ts  uuid.test.ts
mfkdf2-web/test/differential/: derive.test.ts  hints.test.ts  policy.test.ts  reconstitution.test.ts  validation.ts
mfkdf2-web/test/factors/: hmacsha1.test.ts  hotp.test.ts  ooba.test.ts  persisted.test.ts  question.test.ts  stack.test.ts  totp.test.ts  uuid.test.ts
mfkdf2-web/test/features/: entropy.test.ts  integrity.test.ts  policy.test.ts  reconstitution.test.ts
mfkdf2-web/test/mfkdf2/: changes.test.ts  hints.test.ts  mfdpg.test.ts  passkeys.test.ts  security.test.ts  strengthening.test.ts
mfkdf2-web/test/setup/: key.test.ts
mfkdf2-web/test/setup/factors/: hmacsha1.test.ts  hotp.test.ts  ooba.test.ts  passkey.test.ts  password.test.ts  question.test.ts  stack.test.ts  totp.test.ts  uuid.test.ts
mfkdf2/benches/: factor_combination.rs  hmacsha1.rs  hotp.rs  mfdpg.rs  ooba.rs  passkey.rs  password.rs  question.rs  reconstitution.rs  stack.rs  totp.rs  uuid.rs
mfkdf2/src/: constants.rs  crypto.rs  defaults.rs  error.rs  integrity.rs  lib.rs  log.rs  macros.rs  otpauth.rs  policy.rs  prelude.rs  rng.rs  traits.rs  utils.rs
mfkdf2/src/classes/mfkdf_derived_key/: mod.rs
mfkdf2/src/definitions/: bytearray.rs  entropy.rs  factor.rs  key.rs  mod.rs  uniffi_types.rs
mfkdf2/src/definitions/mfkdf_derived_key/: crypto.rs  hints.rs  mfdpg.rs  mod.rs  persistence.rs  reconstitution.rs  strengthening.rs
mfkdf2/src/derive/: key.rs  mod.rs
mfkdf2/src/derive/factors/: hmacsha1.rs  hotp.rs  mod.rs  ooba.rs  passkey.rs  password.rs  persisted.rs  question.rs  stack.rs  totp.rs  uuid.rs
mfkdf2/src/factors/: mod.rs  password.rs  question.rs  uuid.rs
mfkdf2/src/policy/: derive.rs  evaluate.rs  logic.rs  mod.rs  setup.rs  tests.rs
mfkdf2/src/setup/: key.rs  mod.rs
mfkdf2/src/setup/factors/: hmacsha1.rs  hotp.rs  mod.rs  ooba.rs  passkey.rs  password.rs  question.rs  stack.rs  totp.rs  uuid.rs
mfkdf2/tests/: entropy.rs  integration.rs  integrity.rs  more.rs  security.rs  stack.rs
mfkdf2/tests/common/: mod.rs
scripts/: generate_benchmark_table.py
src/: error.rs  lib.rs
src/factors/: mod.rs  password.rs  question.rs  uuid.rs
