[workspace]
members  = ["mfkdf2", "mfkdf2-wasm", "mfkdf2-py"]
resolver = "2"

[workspace.dependencies]
mfkdf2 = { path = "mfkdf2" }

# Cryptography
aes    = { version = "0.8", default-features = false }
argon2 = { version = "0.5" }
ecb    = { version = "0.1", default-features = false }
rand   = { version = "0.8", default-features = false, features = ["std"] }
sharks = { version = "0.5" }
# Password Strength
zxcvbn = "3.1"

# UUID
uuid = { version = "1.17", default-features = false }

# Error Handling
thiserror = { version = "2.0", default-features = false }
