[package]
edition = "2024"
name    = "mfkdf2-wasm"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64     = "0.22"
mfkdf2     = { path = "../mfkdf2" }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For handling async in WASM
console_error_panic_hook = "0.1"
js-sys                   = "0.3"
wasm-bindgen             = "0.2"
wasm-bindgen-futures     = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
