[package]
edition = "2024"
name    = "mfkdf2"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
# Cryptography
aes = { version = "0.8", default-features = false }
cipher = { version = "0.4", default-features = false, features = [
  "block-padding",
] }
ecb = { version = "0.1", default-features = false }
hkdf = { version = "0.12", default-features = false }
sharks = { version = "0.5", default-features = false }

# Randomness
# TODO (autoparallel): This can be made `no-std` if we need to.
rand = { version = "0.8", default-features = false, features = ["std"] }

# Password Strength
zxcvbn = { version = "3.1", default-features = false, features = ["ser"] }

# UUID
uuid = { version = "1.17", default-features = false, features = [
  "serde",
  "v4",
  "v7",
  "js",
] }

# Encoding
# TODO (autoparallel): This can be made `no-std` if we need to.
base64 = { version = "0.22", default-features = false, features = ["std"] }

# Hashing
argon2 = { version = "0.5.3", default-features = false, features = ["std"] }

# TODO: May not need SHA2 anymore.
sha1 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }

# HMAC
hmac = { version = "0.12", default-features = false }

# Error Handling
thiserror = { version = "2.0", default-features = false }

# Serde
serde      = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Uniffi
# TODO (autoparallel): I'm not sure if we can put these features into a different crate or something.
uniffi = { version = "0.29", features = [
  "build",
  "cli",
  "wasm-unstable-single-threaded",
] }
rsa = "0.9.8"
jsonwebtoken = "9.3.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
# itertools = "0.14"
# rstest    = "0.25"
tokio = { version = "1.42", features = ["full"] }
