[package]
edition = "2024"
name    = "mfkdf2"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name              = "uniffi-bindgen"
path              = "uniffi-bindgen.rs"
required-features = ["bindings"]

[dependencies]
# Cryptography
aes = { version = "0.8", default-features = false }
cbc = { version = "0.1.2", default-features = false }
cipher = { version = "0.4", default-features = false, features = [
  "block-padding",
  "rand_core",
  "std",
] }
ecb = { version = "0.1", default-features = false }
hkdf = { version = "0.12", default-features = false }
# TODO (@lonerapier): this version of rsa is vulnerable to marvin sidechannel attack. More info at https://github.com/RustCrypto/RSA/blob/master/README.md#%EF%B8%8Fsecurity-warning
rsa = { version = "0.9.8", default-features = false }
# Hashing
argon2 = { version = "0.5.3", default-features = false, features = ["std"] }
sha1   = { version = "0.10", default-features = false }
sha2   = { version = "0.10", default-features = false }

# HMAC
hmac = { version = "0.12", default-features = false }

# Shamir Secret Sharing
# TODO (autoparallel): move this to a fixed version once ssskit is released.
ssskit = { git = "https://github.com/multifactor/ssskit.git", branch = "main" }

# Randomness
# TODO (autoparallel): This can be made `no-std` if we need to.
rand = { version = "0.8.5", default-features = false, features = [
  "std",
] }
rand_chacha = { version = "0.3.0", default-features = false }
rand_regex = { version = "0.16.0", default-features = false }

# Password Strength
zxcvbn = { version = "3.1", default-features = false, features = ["ser"] }

# UUID
uuid = { version = "1.17", default-features = false, features = [
  "serde",
  "v4",
  "v7",
  "js",
] }

# Encoding
# TODO (autoparallel): This can be made `no-std` if we need to.
base64 = { version = "0.22", default-features = false, features = ["std"] }

# Error Handling
thiserror = { version = "2.0", default-features = false }

# Serde
serde      = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
jsonwebtoken = { version = "10.0.0", default-features = false, features = [
  "rust_crypto",
] }
# Uniffi
# TODO (autoparallel): I'm not sure if we can put these features into a different crate or something.
uniffi = { version = "0.29", optional = true, features = [
  "build",
  "cli",
  "wasm-unstable-single-threaded",
] }

# Logging
log = { version = "0.4.28", default-features = false }

# Regex
data-encoding = { version = "2.9.0", default-features = false, features = [
  "alloc",
] }
regex = { version = "1.11.3", default-features = false }


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = { version = "1.0", default-features = false }
getrandom   = { version = "0.2", default-features = false, features = ["js"] }
web-time    = { version = "1.1", default-features = false }

[dev-dependencies]
# itertools = "0.14"
criterion = "0.7"
rstest    = "0.25"

[[bench]]
harness = false
name    = "password"
path    = "benches/password.rs"

[[bench]]
harness = false
name    = "hmacsha1"
path    = "benches/hmacsha1.rs"

[[bench]]
harness = false
name    = "question"
path    = "benches/question.rs"

[[bench]]
harness = false
name    = "uuid"
path    = "benches/uuid.rs"

[[bench]]
harness = false
name    = "hotp"
path    = "benches/hotp.rs"

[[bench]]
harness = false
name    = "totp"
path    = "benches/totp.rs"

[[bench]]
harness = false
name    = "ooba"
path    = "benches/ooba.rs"

[[bench]]
harness = false
name    = "stack"
path    = "benches/stack.rs"

[[bench]]
harness = false
name    = "passkey"
path    = "benches/passkey.rs"

[[bench]]
harness = false
name    = "factor_combination"
path    = "benches/factor_combination.rs"

[[bench]]
harness = false
name    = "mfdpg"
path    = "benches/mfdpg.rs"

[[bench]]
harness = false
name    = "reconstitution"
path    = "benches/reconstitution.rs"

[features]
default = []
# Enable UniFFI bindings (FFI exports, scaffolding, bin, etc.)
bindings          = ["dep:uniffi"]
differential-test = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
